# gospel

./: Cargo.toml  LICENSE  README.md
gospel-bindings-gen/: Cargo.toml
gospel-bindings-gen/src/: code_generator.rs  lib.rs  module_processor.rs
gospel-bindings-test/: Cargo.toml  build.rs
gospel-bindings-test/res/gospel/unreal/src/: unreal.gs
gospel-bindings-test/src/: main.rs
gospel-compiler/: Cargo.toml
gospel-compiler/res/compiler_rt/: sys.gs
gospel-compiler/src/: assembler.rs  ast.rs  backend.rs  core_attributes.rs  lex_util.rs  lib.rs  main.rs  module_definition.rs  parser.rs
gospel-local-bindings-test/: Cargo.toml  build.rs
gospel-local-bindings-test/res/gospel/unreal/src/: unreal.gs
gospel-local-bindings-test/src/: main.rs
gospel-runtime/: Cargo.toml  build.rs
gospel-runtime/src/: code_generation.rs  core_type_definitions.rs  current_process.rs  external_memory.rs  external_type_model.rs  lib.rs  local_type_model.rs  memory_access.rs  minidump.rs  process.rs  runtime_type_model.rs  static_type_wrappers.rs  type_runtime.rs  vm_integration.rs
gospel-typelib/: Cargo.toml  build.rs
gospel-typelib/src/: lib.rs  target_triplet.rs  type_model.rs
gospel-vm/: Cargo.toml
gospel-vm/src/: bytecode.rs  container.rs  gospel.rs  gospel_type.rs  lib.rs  module.rs  reader.rs  reflection.rs  ser.rs  type_model.rs  vm.rs  writer.rs
tests/: additional_module_file.gs  dependent_assembly.gsa  dependent_assembly.gso  dependent_assembly.gsr  minimal_module.gs  minimal_module.gso  minimal_module_sle.gsa  test_assembly.gsa  test_assembly.gso  test_assembly.gsr  test_parse_module.gs  test_parse_module.json  unreal.gso  unreal_ustruct.gsa
tests/dependent_module/: Gospel.toml
tests/dependent_module/src/: dependent_module.gs
tests/minimal_module/: Gospel.toml
tests/minimal_module/src/: additional_module_file.gs  minimal_module.gs
