[workspace]
resolver = "2"
members = ["gospel-vm", "gospel-compiler", "gospel-typelib", "gospel-runtime", "gospel-bindings-gen"]

[workspace.package]
repository = "https://github.com/trumank/gospel"
authors = ["trumank", "Archengius"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
keywords = ["compiler", "vm", "gospel"]
