[package]
name = "gospel-bindings-gen"
description = "Rust Bindings code generator for Gospel"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
gospel-typelib = { version = "0.1.0", path = "../gospel-typelib" }
gospel-vm = { version = "0.1.0", path = "../gospel-vm" }
gospel-compiler = { version = "0.1.0", path = "../gospel-compiler" }
anyhow = "1.0.93"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
prettyplease = "0.2.37"
convert_case = "0.8.0"
