[package]
name = "gospel-compiler"
description = "Compiler for gospel source files"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
gospel-vm = { version = "0.1.0", path = "../gospel-vm" }
logos = "0.14.2"
anyhow = "1.0.93"
strum = "0.26.3"
strum_macros = "0.26.3"
bitflags = "2.6.0"
clap = { version = "4.5.21", features = ["derive"] }
