[package]
name = "gospel-compiler"
description = "Compiler for gospel source files"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
gospel-vm = { version = "0.1.0", path = "../gospel-vm" }
gospel-typelib = { version = "0.1.0", path = "../gospel-typelib" }
logos = "0.14.2"
anyhow = "1.0.93"
strum = { version = "0.27.2", features = ["derive"] }
bitflags = "2.6.0"
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"
fancy-regex = "0.16.1"