[package]
name = "gospel-runtime"
description = "Rust Bindings for Gospel"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
gospel-typelib = { version = "0.1.0", path = "../gospel-typelib" }
anyhow = "1.0.93"
paste = "1.0.15"
minidump = { version = "0.26.0", optional = true }
process-memory = { version = "0.5.0", optional = true }
gospel-vm = { version = "0.1.0", path = "../gospel-vm", optional = true }
gospel-compiler = { version = "0.1.0", path = "../gospel-compiler", optional = true }
lazy_static = "1.5.0"

[features]
minidump = ["dep:minidump"]
process = ["dep:process-memory"]
vm = ["dep:gospel-vm"]
compiler = ["vm", "dep:gospel-compiler"]
all = ["minidump", "process", "vm", "compiler"]
default = ["all"]
