[package]
name = "gospel-runtime"
description = "Rust Bindings for Gospel"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
gospel-typelib = { version = "0.1.0", path = "../gospel-typelib" }
anyhow = "1.0.93"
paste = "1.0.15"
lazy_static = "1.5.0"
minidump = { version = "0.26.0", optional = true }
process-memory = { version = "0.5.0", optional = true }
gospel-vm = { version = "0.1.0", path = "../gospel-vm", optional = true }
gospel-compiler = { version = "0.1.0", path = "../gospel-compiler", optional = true }
generic-statics = "0.1.0"
region = { version = "3.0.2", optional = true }
iced-x86 = { version = "1.21.0", optional = true, features = ["default", "code_asm"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", optional = true, features = ["basetsd", "ntstatus", "libloaderapi", "errhandlingapi", "winerror"] }
backtrace = { version = "0.3.76", optional = true }

[build-dependencies]
gospel-typelib = { version = "0.1.0", path = "../gospel-typelib" }

[features]
external = []
minidump = ["external", "dep:minidump"]
process = ["external", "dep:process-memory"]
local = ["dep:region", "dep:iced-x86", "dep:winapi", "dep:backtrace"]
vm = ["dep:gospel-vm"]
compiler = ["vm", "dep:gospel-compiler"]
all_local = ["local", "compiler"]
all_external = ["external", "minidump", "process", "compiler"]
default = ["all_local", "all_external"]
