[package]
name = "gospel-typelib"
description = "Type Representation Library utilized by Gospel VM"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.93"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
