[package]
name = "gospel-vm"
description = "Virtual Machine and bytecode manipulation tools for gospel"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.93"
byteorder = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.3"
bitflags = "2.6.0"
