[package]
name = "gospel-vm"
description = "Virtual Machine and bytecode manipulation tools for gospel"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.93"
strum = "0.26.3"
strum_macros = "0.26.3"
serde = { version = "1.0.219", features = ["derive"] }
bitcode = { version = "0.6.6", features = ["serde"] }
