[package]
name = "gospel-vm"
description = "Virtual Machine and bytecode manipulation tools for gospel"
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.93"
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
bitcode = { version = "0.6.6", features = ["serde"] }
gospel-typelib = { version = "0.1.0", path = "../gospel-typelib" }
itertools = "0.14.0"
